unpackaged/main/default/objects/ia_crm__Intacct_Entity__c/ia_crm__Intacct_Entity__c.object-meta.xml
<CustomObject>
    <description>To be deleted is not a common object</description>
    <label>Intacct Entity</label>
    <nameField>
        <label>Intacct Entity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Intacct Entities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>