unpackaged/main/default/objects/ia_crm__Intacct_Entity__c/fields/ia_crm__Address__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Address__c</fullName>
    <label>Address Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>