unpackaged/main/default/objects/ia_crm__Intacct_Entity__c/fields/ia_crm__Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Address_Line_2__c</fullName>
    <label>Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>