unpackaged/main/default/objects/ia_crm__Intacct_Entity__c/fields/ia_crm__Base_Currency__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Base_Currency__c</fullName>
    <label>Base Currency</label>
    <length>12</length>
    <type>Text</type>
</CustomField>