unpackaged/main/default/objects/ia_crm__Intacct_Entity__c/fields/ia_crm__City__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__City__c</fullName>
    <label>City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>