unpackaged/main/default/objects/ia_crm__Intacct_Entity__c/fields/ia_crm__Console_Company__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Console_Company__c</fullName>
    <label>Console Company</label>
    <length>40</length>
    <type>Text</type>
</CustomField>