unpackaged/main/default/objects/ia_crm__Intacct_Entity__c/fields/ia_crm__Corporate_Name__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Corporate_Name__c</fullName>
    <label>Corporate Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>