unpackaged/main/default/objects/ia_crm__Intacct_Entity__c/fields/ia_crm__Country__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Country__c</fullName>
    <label>Country</label>
    <length>60</length>
    <type>Text</type>
</CustomField>