unpackaged/main/default/objects/ia_crm__Intacct_Entity__c/fields/ia_crm__Country_Code__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Country_Code__c</fullName>
    <label>Country Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>