unpackaged/main/default/objects/ia_crm__Intacct_Entity__c/fields/ia_crm__Entity_tree__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Entity_tree__c</fullName>
    <formula>if(  And(ISPICKVAL(ia_crm__Entity_Type__c,&#39;Location&#39;),ISPICKVAL( ia_crm__Parent_Entity__r.ia_crm__Entity_Type__c, &#39;Location&#39;),ISPICKVAL(ia_crm__Parent_Entity__r.ia_crm__Parent_Entity__r.ia_crm__Entity_Type__c , &#39;Location&#39;),ISPICKVAL(ia_crm__Parent_Entity__r.ia_crm__Parent_Entity__r.ia_crm__Parent_Entity__r.ia_crm__Entity_Type__c, &#39;Location&#39;),ISPICKVAL(ia_crm__Parent_Entity__r.ia_crm__Parent_Entity__r.ia_crm__Parent_Entity__r.ia_crm__Parent_Entity__r.ia_crm__Entity_Type__c,&#39;Location&#39;),
ISPICKVAL(ia_crm__Parent_Entity__r.ia_crm__Parent_Entity__r.ia_crm__Parent_Entity__r.ia_crm__Parent_Entity__r.ia_crm__Parent_Entity__r.ia_crm__Entity_Type__c, &#39;Entity&#39;)),ia_crm__Parent_Entity__r.ia_crm__Parent_Entity__r.ia_crm__Parent_Entity__r.ia_crm__Parent_Entity__r.ia_crm__Parent_Entity__r.ia_crm__Intacct_Entity_ID__c + &#39;,&#39; +
ia_crm__Parent_Entity__r.ia_crm__Parent_Entity__r.ia_crm__Parent_Entity__r.ia_crm__Parent_Entity__r.ia_crm__Intacct_Entity_ID__c + &#39;,&#39; + ia_crm__Parent_Entity__r.ia_crm__Parent_Entity__r.ia_crm__Parent_Entity__r.ia_crm__Intacct_Entity_ID__c + &#39;,&#39;+
ia_crm__Parent_Entity__r.ia_crm__Parent_Entity__r.ia_crm__Intacct_Entity_ID__c + &#39;,&#39;+
ia_crm__Parent_Entity__r.ia_crm__Intacct_Entity_ID__c ,
if(And(ISPICKVAL(ia_crm__Entity_Type__c,&#39;Location&#39;),
ISPICKVAL( ia_crm__Parent_Entity__r.ia_crm__Entity_Type__c,&#39;Location&#39;),
ISPICKVAL(ia_crm__Parent_Entity__r.ia_crm__Parent_Entity__r.ia_crm__Entity_Type__c,&#39;Location&#39;),
ISPICKVAL(ia_crm__Parent_Entity__r.ia_crm__Parent_Entity__r.ia_crm__Parent_Entity__r.ia_crm__Entity_Type__c,&#39;Location&#39;),
 ISPICKVAL(ia_crm__Parent_Entity__r.ia_crm__Parent_Entity__r.ia_crm__Parent_Entity__r.ia_crm__Parent_Entity__r.ia_crm__Entity_Type__c,&#39;Entity&#39;)),
ia_crm__Parent_Entity__r.ia_crm__Parent_Entity__r.ia_crm__Parent_Entity__r.ia_crm__Parent_Entity__r.ia_crm__Intacct_Entity_ID__c + &#39;,&#39;
+ ia_crm__Parent_Entity__r.ia_crm__Parent_Entity__r.ia_crm__Parent_Entity__r.ia_crm__Intacct_Entity_ID__c + &#39;,&#39;+
ia_crm__Parent_Entity__r.ia_crm__Parent_Entity__r.ia_crm__Intacct_Entity_ID__c + &#39;,&#39;+
ia_crm__Parent_Entity__r.ia_crm__Intacct_Entity_ID__c,if(And(ISPICKVAL(ia_crm__Entity_Type__c,&#39;Location&#39;),
ISPICKVAL( ia_crm__Parent_Entity__r.ia_crm__Entity_Type__c , &#39;Location&#39;),
ISPICKVAL(ia_crm__Parent_Entity__r.ia_crm__Parent_Entity__r.ia_crm__Entity_Type__c  , &#39;Location&#39;),
ISPICKVAL(ia_crm__Parent_Entity__r.ia_crm__Parent_Entity__r.ia_crm__Parent_Entity__r.ia_crm__Entity_Type__c  , &#39;Entity&#39;)),
ia_crm__Parent_Entity__r.ia_crm__Parent_Entity__r.ia_crm__Parent_Entity__r.ia_crm__Intacct_Entity_ID__c + &#39;,&#39;+
ia_crm__Parent_Entity__r.ia_crm__Parent_Entity__r.ia_crm__Intacct_Entity_ID__c + &#39;,&#39;+
ia_crm__Parent_Entity__r.ia_crm__Intacct_Entity_ID__c,if(And(ISPICKVAL(ia_crm__Entity_Type__c,&#39;Location&#39;),
ISPICKVAL( ia_crm__Parent_Entity__r.ia_crm__Entity_Type__c,&#39;Location&#39;),
ISPICKVAL(ia_crm__Parent_Entity__r.ia_crm__Parent_Entity__r.ia_crm__Entity_Type__c ,&#39;Entity&#39;)),
ia_crm__Parent_Entity__r.ia_crm__Parent_Entity__r.ia_crm__Intacct_Entity_ID__c + &#39;,&#39;+
ia_crm__Parent_Entity__r.ia_crm__Intacct_Entity_ID__c,
if(And(ISPICKVAL(ia_crm__Entity_Type__c,&#39;Location&#39;),
ISPICKVAL( ia_crm__Parent_Entity__r.ia_crm__Entity_Type__c ,&#39;Entity&#39;)),
ia_crm__Parent_Entity__r.ia_crm__Intacct_Entity_ID__c,null)))))</formula>
    <label>Entity tree</label>
    <type>Text</type>
</CustomField>