unpackaged/main/default/objects/ia_crm__Intacct_Entity__c/fields/ia_crm__Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Entity_Type__c</fullName>
    <label>Entity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Entity</fullName>
            </value>
            <value>
                <fullName>Top level</fullName>
            </value>
            <value>
                <fullName>Location</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>