unpackaged/main/default/objects/ia_crm__Intacct_Entity__c/fields/ia_crm__Fax__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Fax__c</fullName>
    <label>Fax</label>
    <type>Phone</type>
</CustomField>