unpackaged/main/default/objects/ia_crm__Intacct_Entity__c/fields/ia_crm__Hidden__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Hidden__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, the users will not be available to select it on the associated objects.</inlineHelpText>
    <label>Hidden</label>
    <type>Checkbox</type>
</CustomField>