unpackaged/main/default/objects/ia_crm__Intacct_Entity__c/fields/ia_crm__Intacct_Entity_ID__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Intacct_Entity_ID__c</fullName>
    <label>Intacct Entity ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>