unpackaged/main/default/objects/ia_crm__Intacct_Entity__c/fields/ia_crm__Parent_Entity__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Parent_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent location</label>
    <referenceTo>ia_crm__Intacct_Entity__c</referenceTo>
    <relationshipLabel>Intacct Entities</relationshipLabel>
    <relationshipName>Intacct_Entitys</relationshipName>
    <type>Lookup</type>
</CustomField>