unpackaged/main/default/objects/ia_crm__Intacct_Entity__c/fields/ia_crm__Phone__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>