unpackaged/main/default/objects/ia_crm__Intacct_Entity__c/fields/ia_crm__Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Postal_Code__c</fullName>
    <label>Postal Code</label>
    <length>18</length>
    <type>Text</type>
</CustomField>