unpackaged/main/default/objects/ia_crm__Intacct_Entity__c/fields/ia_crm__Primary_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Primary_Email_Address__c</fullName>
    <label>Primary Email Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>