unpackaged/main/default/objects/ia_crm__Intacct_Entity__c/fields/ia_crm__Primary_Phone__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Primary_Phone__c</fullName>
    <label>Primary Phone</label>
    <length>30</length>
    <type>Text</type>
</CustomField>