unpackaged/main/default/objects/ia_crm__Intacct_Entity__c/fields/ia_crm__Print_As__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Print_As__c</fullName>
    <label>Print As</label>
    <length>200</length>
    <type>Text</type>
</CustomField>