unpackaged/main/default/objects/ia_crm__Intacct_Entity__c/fields/ia_crm__State_Providence__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__State_Providence__c</fullName>
    <label>State/Providence</label>
    <length>40</length>
    <type>Text</type>
</CustomField>