unpackaged/main/default/objects/ia_crm__Intacct_Entity__c/fields/ia_crm__Top_Entity__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Top_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will hold the top entity for the locations.</description>
    <label>Top Entity</label>
    <referenceTo>ia_crm__Intacct_Entity__c</referenceTo>
    <relationshipLabel>Intacct Entities (Top Entity)</relationshipLabel>
    <relationshipName>Intacct_Entities</relationshipName>
    <type>Lookup</type>
</CustomField>