unpackaged/main/default/objects/ia_crm__Intacct_Entity__c/listViews/ia_crm__All.listView-meta.xml
<ListView>
    <fullName>ia_crm__All</fullName>
    <columns>ia_crm__Intacct_Entity_ID__c</columns>
    <columns>NAME</columns>
    <columns>ia_crm__Entity_Type__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>ia_crm__Status__c</columns>
    <columns>ia_crm__Parent_Entity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>